# silver-window-decoration

./: .kde-ci.yml  AUTHORS  CMakeLists.txt  README.md  SilverConfig.cmake.in  uninstall.sh
colors/: CMakeLists.txt  SilverDark.colors  SilverLight.colors  SilverTwilight.colors
look-and-feel/: CMakeLists.txt
look-and-feel/org.kde.klassykairndarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairndarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairnlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairnlightbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykairnlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairndarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairndarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairnlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairnlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkisweetdarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkisweetdarkbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.silverkisweetdarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkisweetlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkisweetlightbottompanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.silverkisweetlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkisweetlightleftpanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
(+91 files in other folders)
